--- a/anExternal.css
+++ b/anExternal.css
@@ -1,12 +1,12 @@
 body {
-    background-color: hotpink;
+    background-color: rgb(243, 189, 216);
 }
 span {
     float: left;
     width: 0.7em;
-    font-size: 500%;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    line-height: normal;
+    font-size: 700%;
+    font-family:algerian, courier;
+    line-height: 80%;
 }
 .p1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -17,7 +17,7 @@ span {
 }
 
 img {
-    border-radius: 8px;
+    border-radius: 20px;
     margin-right: 20px;
     margin-left: 20px;
 }
