--- a/test.css
+++ b/test.css
@@ -1,35 +1,46 @@
 body{
-
+    background-image: URL("dark_wood.png");
 }
 p{
-
+    color:white;
+    font-family: Arial;
 }
 h3{
-
+    color: #FFBC00;
+    font-size: 40px;
+    font-family: "Passion One";
+    margin-bottom: 0px;
 }
 li{
 
 }
-
+div {
+    background-color: #8E41D5;
+}
 #Header{
     border: solid 8px black;
     width: 500px;
     margin-left: auto;
     margin-right:auto;
     margin-bottom: 10px;
+    text-align: center;
+
 }
 
 #Header h1{
-
+    font-size: 60px;
+    font-family: "Passion One";
+    color: #FFBC00;
+    font-weight: bold;
 }
 
 #LeftNav{
-    border: solid 8px green;
+    border: solid 8px black;
     width: 400px;
-    margin-left: auto;
-    margin-right:auto;
-    margin-bottom: 10px;
-    float:left;
+    float: left;
+    text-align: center;
+    padding-bottom: 8px;
+   
 }
 
 #LeftNav img{
@@ -48,10 +59,25 @@ li{
     border: solid 8px black;
     width: 700px;
     margin-left: auto;
-    margin-right:auto;
+    margin-right: auto;
     margin-bottom: 10px;
+    text-align: center;
+    padding: 15px;
+
 }
 
 #Footer{
+    border: solid 8px black;
+    text-align: center;
 
+}
+ul{
+    list-style-type: none;
+    padding-left: 0px;
+}
+
+a{
+    color: white; 
+    font-weight: bold; 
+    font-size: 24px;
 }
